--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         }
 
         .reel-content {
-            font-size: clamp(0.9em, 3vw, 1.4em);
+            font-size: clamp(0.75em, 3vw, 1.4em);
             font-weight: bold;
             color: #2c3e50;
             padding: 30px 20px;
@@ -168,7 +168,9 @@
             position: relative;
             z-index: 2;
             width: 100%;
-            line-height: 1.4;
+            line-height: 1.3;
+            overflow-wrap: break-word;
+            hyphens: auto;
         }
 
         .reel.spinning .reel-content {
@@ -239,7 +241,7 @@
             }
 
             .reel-content {
-                font-size: clamp(0.85em, 2.5vw, 1.2em);
+                font-size: clamp(0.7em, 2.5vw, 1.2em);
                 padding: 25px 15px;
             }
         }
@@ -256,7 +258,7 @@
             }
 
             .reel-content {
-                font-size: clamp(0.9em, 4vw, 1.3em);
+                font-size: clamp(0.75em, 4vw, 1.3em);
                 padding: 30px 20px;
             }
 
@@ -284,7 +286,7 @@
             }
 
             .reel-content {
-                font-size: clamp(0.8em, 4vw, 1.1em);
+                font-size: clamp(0.65em, 4vw, 1.1em);
                 padding: 25px 15px;
             }
 
@@ -309,7 +311,7 @@
             }
 
             .reel-content {
-                font-size: clamp(0.75em, 4vw, 1em);
+                font-size: clamp(0.6em, 4vw, 1em);
                 padding: 20px 12px;
             }
         }
@@ -397,7 +399,7 @@ As a class</textarea>
         }
 
         // Generate sound effects using Web Audio API
-        function generateTick() {
+        function generateTick(reelIndex = 0) {
             const ctx = initAudioContext();
             const oscillator = ctx.createOscillator();
             const gainNode = ctx.createGain();
@@ -405,11 +407,14 @@ As a class</textarea>
             oscillator.connect(gainNode);
             gainNode.connect(ctx.destination);
 
-            oscillator.frequency.value = 800;
+            // Different pitch for each reel to avoid clipping when layered
+            const frequencies = [700, 850, 1000, 1150];
+            oscillator.frequency.value = frequencies[reelIndex] || 800;
             oscillator.type = 'sine';
 
             const now = ctx.currentTime;
-            gainNode.gain.setValueAtTime(0.3, now);
+            // Reduce volume to prevent clipping when multiple reels play
+            gainNode.gain.setValueAtTime(0.15, now);
             gainNode.gain.exponentialRampToValueAtTime(0.01, now + 0.03);
 
             oscillator.start(now);
@@ -571,12 +576,14 @@ As a class</textarea>
                     // Animate with random values
                     let iterations = 0;
                     const maxIterations = 20 + Math.floor(Math.random() * 10);
+                    // Vary the interval speed per reel (85-115ms range)
+                    const intervalSpeed = 85 + (reelIndex * 7) + Math.floor(Math.random() * 10);
                     const interval = setInterval(() => {
                         content.textContent = randomChoice(list);
 
-                        // Play tick sound on each iteration
+                        // Play tick sound on each iteration with reel-specific pitch
                         try {
-                            generateTick();
+                            generateTick(reelIndex);
                         } catch (e) {}
 
                         iterations++;
@@ -593,7 +600,7 @@ As a class</textarea>
 
                             resolve();
                         }
-                    }, 100);
+                    }, intervalSpeed);
                 }, delay);
             });
         }
